--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
         <nav>
-            <img src="/10k coders logo.jpg" height="150" width="400">
+            <img src="10k coders logo.jpg" height="150" width="400">
             &nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;
             &nbsp;
