--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <article id="HOME">
-        <img src="/10k.png" align="right">
+        <img src="10k.png" align="right">
         <section style="background-color:#f3f3f5;">
             <pre>
              <i width="50%">All my friends have a cushy, high-paying job. Will I ever get a well-paying IT job?</i>
@@ -94,9 +94,9 @@
                 <table border="0" width="100%" cellpadding="5" cellspecing="20">
                     <caption></caption>
                     <tr align="center">
-                        <th text-align="center"><img src="/brain_b1.png" height="100" width="100"></td>
-                            <th align="center"><img src="/p2.png" height="100" width="100"></th>
-                            <th align="center"><img src="/p3.png"></th> 
+                        <th text-align="center"><img src="brain_b1.png" height="100" width="100"></td>
+                            <th align="center"><img src="p2.png" height="100" width="100"></th>
+                            <th align="center"><img src="p3.png"></th> 
                         </tr>
                         <tr>
                             <td><b>Become proficient in on-trend and in-demand skills</b></td>
