--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                             <td>From coding to communication, from project management to interview attending skills, you will learn and do everything it takes to become a highly valued software developer. What you will learn and what you will do at the job will be EXACTLY the same. So you work and talk like a pro right from day one in your job.</td>
                         </tr>
                         <tr>
-                            <th><img src="/p7.png"  height="100" width="100"></th>
-                            <th><img src="/p4.png"  height="100" width="100"></th>
-                            <th><img src="/p5.png"  height="100" width="100"></th>
+                            <th><img src="p7.png"  height="100" width="100"></th>
+                            <th><img src="p4.png"  height="100" width="100"></th>
+                            <th><img src="p5.png"  height="100" width="100"></th>
                         </tr>
                         <tr>
                             <td><b>Turn into a well-rounded software developer</b></td>
@@ -129,7 +129,7 @@
 
             <table border="0" width="100%" cellpadding="5" cellspecing="20">
                 <tr>
-                    <th><img src="/p7.png" height="100" width="100"></th>
+                    <th><img src="p7.png" height="100" width="100"></th>
                     <th></th>
                 </tr>
                 <tr>
@@ -267,15 +267,15 @@
             <marquee behavior="scroll" width="80%" direction="left" height="400" hspace="20" loop >
                 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
                 <img src="c1.jpg" alt="scrolling image" height="100" width="100">
-                <img src="/c2.jpg" alt="scrolling image" height="100" width="100">
-                <img src="/c3.jpg"  alt="scrolling image" height="100" width="100">
-                <img src="/c4.jpg"  alt="scrolling image" height="100" width="100">
-                <img src="/c5.jpg" alt="scrolling image"  height="100" width="100">
-                <img src="/c6.jpg"  alt="scrolling image" height="100" width="100">
-                <img src="/c7.jpg"  alt="scrolling image" height="100" width="100">
-                <img src="/c8.jpg"  alt="scrolling image" height="100" width="100">
-                <img src="/c9.jpg"  alt="scrolling image" height="100" width="100">
-                <img src="/c10.jpg"  alt="scrolling image" height="100" width="100">
+                <img src="c2.jpg" alt="scrolling image" height="100" width="100">
+                <img src="c3.jpg"  alt="scrolling image" height="100" width="100">
+                <img src="c4.jpg"  alt="scrolling image" height="100" width="100">
+                <img src="c5.jpg" alt="scrolling image"  height="100" width="100">
+                <img src="c6.jpg"  alt="scrolling image" height="100" width="100">
+                <img src="c7.jpg"  alt="scrolling image" height="100" width="100">
+                <img src="c8.jpg"  alt="scrolling image" height="100" width="100">
+                <img src="c9.jpg"  alt="scrolling image" height="100" width="100">
+                <img src="c10.jpg"  alt="scrolling image" height="100" width="100">
             </marquee>
         </section>
 
